# Smart-Assistant

./: .env  .gitignore  Dockerfile  Dockerfile.min  INTEGRATION_PLAN.md  OpenWebUI.md  README.md  UIDesignSecondDraft.html  app.py  docker-compose.yml  ingest.py  prompts.md  requirements.txt~
UIDesignSecondDraft_files/: 1190-6875c49196918b6f.js  1330-db93ab6eca3e6fee.js  1878-b0f1367ab74d2fe4.js  2319-cf7e65e0050fb4e4.js  2366-a8cbaa695096bc8c.js  2429-507bed3e8bb2d286.js  4  4392-f52f02cc1a202a2f.js  4_002  5182-0a258052d90b5a08.js  5649-b4901f6e8bf42bf2.js  603-e672d2759d6fccee.js  6jtvfjoehy.js  7294-2bdb5f9ed3eeace9.js  7681-96a32a6b1ffc2aed.js  7791-ba09cb82c39c7298.js  8084c5f1-122cf38b8fdcb8bf.js  8154-d991afd353d3d1f0.js  8603-d240b6f4584f9e8b.js  8953-177440f77387d378.js  9588-98622d6f8be0f84d.js  9605-216b8dc80f945af7.js  a.html  a_002.html  api.js  client  css.css  f.txt  f_002.txt  home.html  platform.js  (+4 more)
backend/: .env.example  .env.template  LICENSE  Makefile  README.md  alembic.ini  analysis_tool.py  cli.py  config.py  debug_airtable_config.py  debug_scraper.js  dev.sh  ingest.py  job_config.json  main.py  package-lock.json  package.json  pyproject.toml  quick_test.py  requirements.txt  scraping_tool.py  temp_scraper_290163.js  temp_scraper_450216.js  test.sh  test_airtable_debug.py  test_deduplication.py  test_graph_centrality.py  test_graph_enrichment.py  test_pipeline.py  test_scraper_debug.py  test_vectorstore.py  upload_cv.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 390308ac594c_initial_schema.py
backend/app/: cli.py  main.py
backend/app/api/: smart_assistant.py
backend/app/core/: ai_service.py  airtable_client.py  config.py  cv_manager.py  database.py  gemini_client.py  graphrag_query_adapter.py  graphrag_service.py  job_deduplication.py  linkedin_scraper_v2.py  logging.py
backend/app/functions/: __init__.py  inbox_management.py  intelligence_briefing.py  job_discovery.py
backend/app/models/: __init__.py  database.py  smart_assistant.py
backend/app/services/: cluster_service.py
backend/configs/: graphrag_config.example.yml
backend/data/cv/: README.md
backend/db/: chroma.sqlite3
backend/graphrag_artifacts/: latest
backend/graphrag_artifacts/run-20250811-174429/: _RUNNING  communities.csv  community_reports.csv  entities.csv  relationships.csv
backend/graphrag_artifacts/run-20250811-174610/: _RUNNING  communities.csv  community_reports.csv  entities.csv  relationships.csv
backend/graphrag_artifacts/run-20250811-174744/: _RUNNING  communities.csv  community_reports.csv  entities.csv  relationships.csv
backend/graphrag_artifacts/run-20250811-175210/: _RUNNING  communities.csv  community_reports.csv  entities.csv  relationships.csv
backend/graphrag_artifacts/run-20250813-133325/: _RUNNING  communities.csv  community_reports.csv  entities.csv  relationships.csv
backend/scripts/: import_graphrag_artifacts.py  run_graphrag_index.py
backend/tests/: __init__.py  test_cluster_summary_budget.py  test_delta_metrics.py  test_delta_selective_and_cache.py  test_graphrag_advanced.py  test_graphrag_clusters.py  test_graphrag_heuristic.py  test_graphrag_import.py  test_graphrag_pagination.py  test_graphrag_phase7_10.py  test_graphrag_provenance.py  test_graphrag_snapshots.py  test_index_orchestrator.py  test_job_deduplication_unit.py  test_job_pipeline.py  test_linkedin_scraper_rebuilt.py  test_linkedin_scraper_v2_clean.py  test_live_job_discovery.py  test_metrics_extended.py  test_phase1_simplified.py  test_query_adapter.py  test_quick_job_discovery.py
backend/tmp/: graph_stats.json  ingest_pdf_resp.json  smoke_output.json
(+74 files in other folders)
